--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.apiCards {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 5px;
+  column-gap: 2px;
+  width: 80%;
+  margin: 0 auto;
+}
+.cards {
+  color: #fff;
+  width: 250px;
+  border: 1px solid rgb(215, 218, 221);
+  background-color: rgb(47, 135, 250);
+  padding: 25px;
+}
+
+.cards__container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.text {
+  margin: 0 0 10px 0;
+  text-align: center;
+  color: #fff;
+}
+.cards__title {
+  flex: 1 1 auto;
+  margin-bottom: 20px;
+}
+.cards__body {
 }
